2018-03-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix complex atan()
	* Derivative of arg()
	* ln(x^a)=ln(x)*a if 1>a>-1 and a!=0

2018-03-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segmentation fault when calculating arg(-x)

2018-03-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Derivative of gamma(), besselj(), heaviside(), Ci(), Si(), Shi(), Chi(), Ei(), Li(), li(), erf(), erfc(), sinc(),
	  factorial and comparisons, and use dirac() for derative of sgn().
	* Complete the square when factorizing

2018-03-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* --version (-v) command line option for qalc
	* Make data and config directories recursively

2018-03-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Always display rational exponents as fractions if numerator and denominator is less than ten
	* Fix endless loop when factorizing expression with sgn()
	* Number display fixes

2018-03-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix endless loop with (5^x)^(1/3)*5^x
	* Precalculate in replace() function if original value not found

2018-03-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segmentation fault root() in some cases

2018-03-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* ln(x^a)=a*ln(x) only when x is positive

2018-03-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Increase efficieny of trigonometric functions in some cases
	* Fix 1^x
	* Allow final interval expansion for high precision intervals

2018-03-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix endless loop when solving (x^(1/3))^3 * (x^(1/3))^2 + (x^(1/3))^2!=0 and similar with variable substitution

2018-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved handling of blocked messages
	* sin(x)^2+cos(x)^2=1

2018-03-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Partial fractional decomposition
	* << operator for MathStructure and Number
